--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,7 @@ use_frameworks!
 
 target 'GlobalModule_Example' do
   pod 'GlobalModule', :path => '../'
-  pod 'ObjectMapper'
+  pod 'ObjectMapper', '~> 4.0'
 #  pod 'JVFloatLabeledTextField'
 #  pod 'CRRefresh'#, '1.1.3'
 #  pod 'SVGKit'
