--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,7 @@ use_frameworks!
 
 target 'GlobalModule_Example' do
   pod 'GlobalModule', :path => '../'
-#  pod 'Kingfisher'
+  pod 'Kingfisher'
 #  pod 'CRRefresh'#, '1.1.3'
 #  pod 'SVGKit'
 #  pod 'JGProgressHUD'
@@ -21,6 +21,7 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
+      config.build_settings['CONFIGURATION_BUILD_DIR'] = '$PODS_CONFIGURATION_BUILD_DIR'
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
     end
   end
