--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,7 +5,7 @@ use_frameworks!
 target 'GlobalModule_Example' do
   pod 'GlobalModule', :path => '../'
 #  pod 'CRRefresh'#, '1.1.3'
-#  pod 'SVGKit'
+  pod 'Kingfisher'
 #  pod 'JGProgressHUD'
 #  pod 'TransitionButton', '0.5.2'
 #  pod 'IQKeyboardManagerSwift', '6.5.6'
