--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,16 +1,7 @@
 use_frameworks!
-
-platform :ios, '12.0'
+#platform :ios, '12.0'
 target 'GlobalModule_Example' do
   pod 'GlobalModule', :path => '../'
-  pod 'JGProgressHUD'#, '2.2'
-  pod 'IQKeyboardManagerSwift', '6.5.6'
-  pod 'SwiftSoup'
-  pod 'MOLH'#, '0.8'
-  pod 'JVFloatLabeledTextField'
-  pod 'CRRefresh'#, '1.1.3'
-  pod 'FittedSheets', '1.3.0'
-  pod 'TransitionButton', '0.5.2'
   target 'GlobalModule_Tests' do
     inherit! :search_paths
   end
@@ -18,7 +9,7 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
-#      config.build_settings['CONFIGURATION_BUILD_DIR'] = '$PODS_CONFIGURATION_BUILD_DIR'
+      config.build_settings['CONFIGURATION_BUILD_DIR'] = '$PODS_CONFIGURATION_BUILD_DIR'
 # Ensure correct SWIFT_OPTIMIZATION_LEVEL for Debug configuration
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
     end
