--- a/Example/Podfile
+++ b/Example/Podfile
@@ -11,7 +11,8 @@ post_install do |installer|
     target.build_configurations.each do |config|
       config.build_settings['CONFIGURATION_BUILD_DIR'] = '$PODS_CONFIGURATION_BUILD_DIR'
 # Ensure correct SWIFT_OPTIMIZATION_LEVEL for Debug configuration
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+#      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
     end
   end
 end
